# levi

./: .gitignore  CMakeLists.txt  appveyor.yml  travis.yml
cmake/: CMakeLists.auto  leviConfig.cmake.in  sDiffConfig.cmake.in
include/levi/: AccessorEvaluables.h  AddendsExpander.h  AdvancedConstructors.h  AutogeneratedEvaluable.h  AutogeneratedHelper.h  BasicEvaluables.h  CompiledEvaluable.h  DependenciesSet.h  Evaluable.h  Expression.h  ExpressionImplementation.h  ForwardDeclarations.h  HelpersForwardDeclarations.h  MultipleCompiledExpressions.h  MultipleSqueezedExpressions.h  OperatorsBase.h  OperatorsEvaluables.h  Registrar.h  SqueezeEvaluable.h  TreeExpander.h  TypeDetector.h  Variable.h  VariableBase.h  levi.h
include/sDiff/: AccessorEvaluables.h  AdvancedConstructors.h  BasicEvaluables.h  Evaluable.h  EvaluableVariable.h  Expression.h  ExpressionElement.h  ExpressionImplementation.h  ForwardDeclarations.h  OperatorsEvaluables.h  Variable.h  VariableBase.h  sDiff.h
tests/: AdvancedConstructorsTest.cpp  CMakeLists.txt  CacheTest.cpp  CompiledRotationTest.cpp  CompositionTest.cpp  DependenciesTest.cpp  DerivativeTest.cpp  RotationTest.cpp
